--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "description": "",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.69.5"
   },
   "scripts": {
+    "dev":"gulp watch",
     "build": "gulp",
     "test": "echo \"Error: no test especified\" && exit 1"
   }
